add return functionality by sic
