# src/main/resources/api-definition.yaml
@@ -596,6 +596,48 @@ resourceTypes:
                       body:
                         application/json:
                             schema: localizedMessage
+
+      /{id}/reject_at_authorization:
+          uriParameters:
+              id:
+                  displayName: id
+                  type: string
+                  required: true
+                  repeat: false
+          put:
+              is: [ secured, idempotent ]
+              description: Reject requisition which is waiting for approval.
+              body:
+                application/json:
+                  schema: rejectionDtoArray
+              responses:
+                  "200":
+                      headers:
+                        Keep-Alive:
+                      body:
+                        application/json:
+                            schema: basicRequisitionDto
+                  "400":
+                      body:
+                        application/json:
+                          schema: localizedMessage
+                  "404":
+                      body:
+                        application/json:
+                          schema: localizedMessage
+                  "403":
+                      headers:
+                        Keep-Alive:
+                      body:
+                        application/json:
+                            schema: localizedMessage
+                  "409":
+                      headers:
+                        Keep-Alive:
+                      body:
+                        application/json:
+                            schema: localizedMessage
+
       /{id}/submit:
           post:
               is: [ secured, idempotent ]
